# specter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  scene.json  scene_setup.json  specter.sln
ext/: stb_image_write.h
results/: README.md
results/AO/: README.md
scene/: ajax.json  conference.json  cornell.json  cube.json  debug.json  fireplace.json  multiple_meshes.json  scene.json  sponza.json  test.json
shaders/: gaussian_filter.glsl.comp  gaussian_filter_fast.glsl.comp  quad.glsl.fs  quad.glsl.vs
shaders/dbg/: dbg_halfray.glsl.fs
specter/: specter.vcxproj  specter.vcxproj.filters
specter-test/: aabb_tests.cpp  coordinate_transform_tests.cpp  matrix_test.cpp  test_entry.cpp  vector_tests.cpp
specter/x64/Release/: specter.exe.recipe  specter.iobj  specter.ipdb
specter/x64/Release/specter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  specter.lastbuildstate
src/: aabb.cpp  aabb.hpp  accel.cpp  accel.hpp  ambient_light.cpp  ambient_light.hpp  area_light.cpp  area_light.hpp  camera.cpp  camera.hpp  common.hpp  common_math.cpp  common_math.hpp  coordinate_system.cpp  coordinate_system.hpp  dbg_scratchpaper.txt  diffuse_light.hpp  filters.cpp  filters.hpp  glad.c  grayscale_filter.cpp  hit_record.hpp  imgui_wrapper.cpp  imgui_wrapper.hpp  implementation_notes.txt  integraotr_pt.cpp  integrator.hpp  integrator_pt.hpp  intersection.hpp  light.hpp  main.cpp  mat3.hpp  mat4.hpp  material.hpp  material_emissive.hpp  material_lambertian.cpp  material_lambertian.hpp  material_metal.cpp  material_metal.hpp  mesh.cpp  (+48 more)
src/dev/: cpu_lbvh.cpp  cpu_lbvh.hpp  cpu_lbvh_helpers.hpp  cpu_lbvh_misc.cpp  model.hpp  model_loader.cpp
src/filesystem/: convert_obj_to_sff.hpp  helpers.hpp  material_processor.cpp  material_processor.hpp  model.cpp  model.hpp  model_loader.cpp  sff.hpp  sff_spec.txt
src/math/: common_math.hpp  mat3.hpp  mat4.hpp  simd_math.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/raster/: raster_engine.cpp  raster_engine.hpp  scene_manager.hpp  texture_viewer.cpp  texture_viewer.hpp
src/rtx/: aabb.cpp  aabb.hpp  accel.cpp  accel.hpp  ambient_light.hpp  area_light.cpp  camera.cpp  camera.hpp  coordinate_system.hpp  cpu_lbvh.cpp  cpu_lbvh.hpp  cpu_lbvh_helpers.hpp  cpu_lbvh_misc.cpp  filters.hpp  integrator_normal.cpp  integrator_normal.hpp  intersection.hpp  light.hpp  material_emissive.hpp  material_lambertian.cpp  material_metal.cpp  material_metal.hpp  octree.cpp  octree.hpp  ray.hpp  sampler.hpp  space_partition.hpp  texture.hpp  texture_image.hpp  texture_single_color.cpp  texture_single_color.hpp  triangle.cpp  triangle.hpp
src/shaders/: bump_shader.glsl.fs  bump_shader.glsl.vs  dbg_halfray.glsl.vs  flat_shading.glsl.fs  grayscale_filter.glsl.comp  hello_shader.glsl.fs  hello_shader.glsl.vs  simple.glsl.fs  simple.glsl.vs  simple_solid.glsl.fs  texture_viewer.glsl.fs  texture_viewer.glsl.vs
